--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ button:hover {
 	color: #337cac;
 }
 
+.backspace {
+	color: #7d2741;
+}
+
 .all-clear {
 	background-color: #881d41;
 	border-color: #662733;
@@ -69,7 +73,7 @@ button:hover {
 }
 
 .all-clear:hover {
-	background-color: #662733;
+	background-color: #f17377;
 }
 
 .equal-sign {
@@ -77,7 +81,7 @@ button:hover {
 	border-color: #1a1a1c;
 	color: #fff;
 	height: 100%;
-	grid-area: 2 / 4 / 6 / 5;
+	grid-area: 3 / 4 / 6 / 5;
 }
 
 .equal-sign:hover {
